# Windows-Defender-Quarantine-File-Decryptor

./: LICENSE  README.md
Blog-References-Stuff/: Code_Benchmark.ps1  MDE_Decode.py  MDE_Decode_Entries.py
DefenderEntriesDecryptor/: Cargo.toml  build.rs
DefenderEntriesDecryptor/src/: main.rs
DefenderFileDecryptor/: Cargo.toml
DefenderFileDecryptor/src/: main.rs
